write {tumor, normal} read depths to file, and tumor logR

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,6 @@
   <name>ASCAT NGS Utils</name>
 
   <properties>
-
     <adam.version>0.19.1-SNAPSHOT</adam.version>
     <java.version>1.7</java.version>
     <scala.version>2.11</scala.version>
@@ -27,6 +26,8 @@
     <spark.version>1.6.1</spark.version>
     <avro.version>1.8.0</avro.version>
     <pageant.version>1.0-SNAPSHOT</pageant.version>
+    <guacamole.version>0.0.1-SNAPSHOT</guacamole.version>
+    <scala.version.prefix>2.10</scala.version.prefix>
   </properties>
 
   <licenses>
@@ -136,7 +137,6 @@
             <id>scala-compile-first</id>
             <phase>process-resources</phase>
             <goals>
-              <goal>add-source</goal>
               <goal>compile</goal>
             </goals>
             <configuration>
@@ -145,67 +145,12 @@
               </args>
             </configuration>
           </execution>
-          <execution>
-            <id>scala-test-compile-first</id>
-            <phase>process-test-resources</phase>
-            <goals>
-              <goal>testCompile</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>attach-scaladocs</id>
-            <phase>verify</phase>
-            <goals>
-              <goal>doc-jar</goal>
-            </goals>
-          </execution>
         </executions>
         <configuration>
-          <scalaVersion>${scala.version}</scalaVersion>
-          <recompileMode>incremental</recompileMode>
-          <useZincServer>true</useZincServer>
-          <args>
-            <arg>-unchecked</arg>
-            <arg>-optimise</arg>
-            <arg>-deprecation</arg>
-          </args>
-          <jvmArgs>
-            <jvmArg>-Xms64m</jvmArg>
-            <jvmArg>-Xms1024m</jvmArg>
-            <jvmArg>-Xmx1024m</jvmArg>
-          </jvmArgs>
-          <javacArgs>
-            <javacArg>-source</javacArg>
-            <javacArg>${java.version}</javacArg>
-            <javacArg>-target</javacArg>
-            <javacArg>${java.version}</javacArg>
-          </javacArgs>
         </configuration>
       </plugin>
-      <plugin>
-        <groupId>org.apache.avro</groupId>
-        <artifactId>avro-maven-plugin</artifactId>
-        <version>${avro.version}</version>
-        <executions>
-          <execution>
-            <id>schemas</id>
-            <phase>generate-sources</phase>
-            <goals>
-              <goal>schema</goal>
-              <goal>protocol</goal>
-              <goal>idl-protocol</goal>
-            </goals>
-            <configuration>
-              <sourceDirectory>${project.basedir}/src/main/resources/avro</sourceDirectory>
-              <stringType>String</stringType>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
     </plugins>
-
   </build>
-
 
   <repositories>
     <repository>
@@ -276,6 +221,26 @@
   </profiles>
 
   <dependencies>
+    <dependency>
+      <groupId>org.hammerlab</groupId>
+      <artifactId>guacamole</artifactId>
+      <version>${guacamole.version}</version>
+      <scope>system</scope>
+      <systemPath>/Users/eliza/hammerlab/guacamole/target/guacamole-with-dependencies-${guacamole.version}.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>org.scalatest</groupId>
+      <artifactId>scalatest_${scala.version.prefix}</artifactId>
+      <version>2.2.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.bdgenomics.bdg-utils</groupId>
+      <artifactId>bdg-utils-misc</artifactId>
+      <version>0.1.1</version>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>org.hammerlab</groupId>
       <artifactId>pageant</artifactId>
