--- a/pom.xml
+++ b/pom.xml
@@ -19,10 +19,10 @@
   <name>ASCAT NGS Utils</name>
 
   <properties>
-    <adam.version>0.19.1-SNAPSHOT</adam.version>
-    <java.version>1.7</java.version>
-    <scala.version>2.11</scala.version>
-    <scala.version.prefix>2.11</scala.version.prefix>
+    <adam.version>0.19.0</adam.version>
+    <java.version>1.8</java.version>
+    <scala.version>2.10.5</scala.version>
+    <scala.version.prefix>2.10</scala.version.prefix>
     <spark.version>1.6.1</spark.version>
     <avro.version>1.8.0</avro.version>
     <guacamole.version>0.0.1-SNAPSHOT</guacamole.version>
@@ -145,9 +145,43 @@
               </args>
             </configuration>
           </execution>
+          <execution>
+            <id>scala-test-compile-first</id>
+            <phase>process-test-resources</phase>
+            <goals>
+              <goal>testCompile</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>attach-scaladocs</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>doc-jar</goal>
+            </goals>
+          </execution>
         </executions>
         <configuration>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.scalatest</groupId>
+        <artifactId>scalatest-maven-plugin</artifactId>
+        <version>1.0</version>
+        <configuration>
+          <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+          <junitxml>.</junitxml>
+          <filereports>GuacamoleTestSuite.txt</filereports>
+          <argLine>-Xmx3072m</argLine>
+          <stdout>F</stdout>
+        </configuration>
+        <executions>
+          <execution>
+            <id>test</id>
+            <goals>
+              <goal>test</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
